# big-file-test

./: .gitignore  Cargo.toml  ca.crt  ca.key  ca.srl  gen-file.sh  readme.md  server.crt  server.crt.der  server.csr  server.ext  server.key  server.key.der
go-quic/: go.mod  go.sum  quic-server.go
scripts/: analyze_bursts.py  benchmark.py  visualize_send_waker.py
src/: client.rs  h3-client.rs  h3-server.rs  server.rs  tcp-client.rs  tcp-server.rs
